<resources>
    <string name="app_name">Forteza</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mi tellus convallis tristique in, faucibus eu dictum vel euismod, bibendum sapien libero tellus at. Pellentesque pellentesque elit duis vel eget, arcu at metus, sodales integer curabitur in commodo praesent cursus, consectetur neque dolor dapibus placerat lorem, sed nascetur. A mattis ac laoreet eu pellentesque ornare, libero ut quam diam enim, dui mauris, massa at, nonummy risus wisi non nisl dignissimos. Arcu amet. Curabitur justo leo vestibulum sapien nec suspendisse, elementum risus, lacinia sit, amet a, sem libero vivamus lorem. Non a pulvinar lectus, accumsan purus faucibus sit conubia. Massa ante, esse adipiscing est nullam interdum laoreet nunc, a et et libero eu eu. Arcu quisque massa. Ut pellentesque.
Sed aliquam at, iaculis pede justo sagittis, aliquam amet porta aenean blandit. Ultricies netus pulvinar. Aliquet gravida posuere nibh tempor potenti, nonummy ullam sit curae, etiam tellus lorem nunc, magna dolor suspendisse, pellentesque leo. Placerat quam ullamcorper hymenaeos, elit ipsum eleifend ultrices non mi vitae. Et nec porta nulla ornare at ut, amet ut porta, elementum dolor risus tellus, nisl vehicula eget non vitae, aliquam et in cursus imperdiet nunc consequat. Enim ante elit ut mus a, sed esse at ac sapien, nulla rerum rhoncus aenean id commodo, nisl sodales porttitor nullam vitae, ipsum dolor faucibus turpis ut sit.</string>

    <string name="longsword">longsword</string>
    <string name="rapier">rapier</string>
    <string name="other">other</string>

    <string name="nav_home">Home</string>
    <string name="nav_origin">Origin</string>
    <string name="nav_stance">Stance, Grip and Footwork</string>
    <string name="nav_guards">Guards</string>
    <string name="nav_offense">Offense</string>
    <string name="nav_defending">Defending</string>
    <string name="nav_time">Time and Distance</string>
    <string name="nav_appendix">Appendix</string>
    <string name="nav_change">Change Weapon</string>


    <string name="title_history_longsword">HISTORY OF LONGSWORD</string>
    <string name="title_history_rapier">HISTORY OF RAPIER</string>
    <string name="title_history_other">HISTORY OF OTHER</string>

    <string name="change_weapon">Change weapon type</string>

    <!-- II. Longsword Stance, Grip and Footwork-->
    <string name="basic_stance">Basic Stance</string>
    <string name="basic_grip">Gripping the Longsword</string>
    <string name="basic_footwork">Footwork</string>
    <string name="basic_direction">Direction</string>


    <!-- IV. Guards -->
    <string name="introduction">INTRODUCTION</string>
    <string name="guards_p1">Each Italian master-at-arms had a similar, yet distinct series of guards or <i>poste</i> (\"stations/seats\") for the longsword. These poste don\'t really \"guard\" anything. Rather, they are the natural starting and ending points of the eight cuts and four thrusts of the longsword. As such, they are also interconnected; the swordsman will flow from poste to poste in the course of a sword fight. Each guard <i>does</i> make it naturally difficult to strike one target, while leaving another area inherently vulnerable. A good swordsman understands this relationship, and uses it to manipulate his opponent to attack where he desires. <b>For example, the Half Iron Door makes it difficult to strike the legs, while seemingly leaving the head vulnerable. Knowing this, a good swordsman will anticipate an attack to the head, and be able to instantly lift his sword in such a way to parry the blow, and leave his adversary vulnerable.</b>
    \n\nIn <i>Il Fior di Battaglia</i> (\"The Flower of Battle\"), Fiore dei Liberi defines twelve principle guards for the two-handed sword, and shows several variations of some. You will find these illustrated in the Appendices. Of these twelve, we will use seven in this course.</string>

    <!-- guard names -->
    <string-array name="guards_longsword_italian">
        <item name="il_l_guard1">Tutta porta di ferro</item>
        <item name="il_l_guard2">Posta di donna</item>
        <item name="il_l_guard3">Posta di fenestra</item>
        <item name="il_l_guard4">Posta di donna la sinestra</item>
        <item name="il_l_guard5">Posta longa</item>
        <item name="il_l_guard6">Porta di ferro mezana</item>
        <item name="il_l_guard7">Posta breve</item>
        <item name="il_l_guard8">Dente di zenghiaro</item>
        <item name="il_l_guard9">Posta di coda longa</item>
        <item name="il_l_guard10">Posta di Bicorno</item>
        <item name="il_l_guard11">Posta frontale ditta corona</item>
        <item name="il_l_guard12">Posta di dente zenchiaro mezana</item>
    </string-array>

    <string-array name="guards_longsword_english">
        <item name="en_l_guard1">Whole iron door</item>
        <item name="en_l_guard2">Woman\'s guard</item>
        <item name="en_l_guard3">Window guard</item>
        <item name="en_l_guard4">Woman\'s guard on the left</item>
        <item name="en_l_guard5">Long guard</item>
        <item name="en_l_guard6">Middle iron door</item>
        <item name="en_l_guard7">Short guard</item>
        <item name="en_l_guard8">Boar\'s tooth</item>
        <item name="en_l_guard9">Long tail guard</item>
        <item name="en_l_guard10">Two horned guard</item>
        <item name="en_l_guard11">Frontal position called "crown"</item>
        <item name="en_l_guard12">Middle boar\'s tooth guard</item>
    </string-array>

    <string-array name="guards_longsword_images">
        <item name="image_l_guard1">longa</item>
        <item name="image_l_guard2">longa</item>
        <item name="image_l_guard3">longa</item>
        <item name="image_l_guard4">longa</item>
        <item name="image_l_guard5">longa</item>
        <item name="image_l_guard6">longa</item>
        <item name="image_l_guard7">longa</item>
        <item name="image_l_guard8">longa</item>
        <item name="image_l_guard9">longa</item>
        <item name="image_l_guard10">longa</item>
        <item name="image_l_guard11">longa</item>
        <item name="image_l_guard12">longa</item>
    </string-array>

</resources>
