<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <com.red.forteza.ui.view.FTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_weapon" />


    <RadioGroup
        android:id="@+id/group_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/option_longsword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longsword" />

        <RadioButton
            android:id="@+id/option_rapier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rapier" />

        <RadioButton
            android:id="@+id/option_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

</LinearLayout>