<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/center_vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:background="@color/black" />

    <View
        android:id="@+id/center_horizontal"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/black" />

    <com.red.forteza.ui.view.BasicsView
        android:id="@+id/basic_stance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/center_vertical"
        android:layout_toLeftOf="@id/center_horizontal"
        app:backgroundImage="@drawable/longa"
        app:iconImage="@drawable/ic_directions_walk_white_24dp"
        app:name="@string/basic_stance" />

    <com.red.forteza.ui.view.BasicsView
        android:id="@+id/basic_grip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/center_vertical"
        android:layout_toRightOf="@id/center_horizontal"
        app:backgroundImage="@drawable/longa"
        app:iconImage="@drawable/ic_directions_walk_white_24dp"
        app:name="@string/basic_grip" />

    <com.red.forteza.ui.view.BasicsView
        android:id="@+id/basic_footwork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/center_vertical"
        android:layout_toLeftOf="@id/center_horizontal"
        app:backgroundImage="@drawable/longa"
        app:iconImage="@drawable/ic_directions_walk_white_24dp"
        app:name="@string/basic_footwork" />

    <com.red.forteza.ui.view.BasicsView
        android:id="@+id/basic_direction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/center_vertical"
        android:layout_toRightOf="@id/center_horizontal"
        app:backgroundImage="@drawable/longa"
        app:iconImage="@drawable/ic_directions_walk_white_24dp"
        app:name="@string/basic_direction" />

</RelativeLayout>